# sRight

./: .gitignore  .prettierrc  Cargo.toml  DESIGN.md  README.md  package.json  pnpm-lock.yaml
.workflow/.maestro/ralph-20260519-161614/: status.json  wave-0-results.csv  wave-0.csv  wave-1-results.csv  wave-1.csv  wave-2-results.csv  wave-2.csv  wave-3-results.csv  wave-3.csv
.workflow/.maestro/ralph-20260519-194440/: status.json  wave-0-results.csv  wave-0.csv  wave-1-results.csv  wave-1.csv  wave-2-results.csv  wave-2.csv  wave-3-results.csv  wave-3.csv  wave-4-results.csv  wave-4.csv  wave-5-results.csv  wave-5.csv  wave-6-results.csv  wave-6.csv
.workflow/.maestro/ralph-20260520-202420/: status.json  wave-0-results.csv  wave-0.csv  wave-1-results.csv  wave-1.csv  wave-2-results.csv  wave-2.csv  wave-3-results.csv  wave-3.csv  wave-4-results.csv  wave-4.csv  wave-5-results.csv  wave-5.csv  wave-6-results.csv  wave-6.csv  wave-7-results.csv  wave-7.csv  wave-8.csv  (+1 more)
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
crates/sright-cli/: Cargo.toml
crates/sright-cli/src/: main.rs
crates/sright-cli/tests/: cli_smoke.rs
crates/sright-core/: Cargo.toml
crates/sright-core/src/: actions.rs  config.rs  lib.rs  logging.rs  paths.rs
crates/sright-core/tests/: core_smoke.rs  phase2_actions.rs  phase3_actions.rs  phase4_phase5_actions.rs
docs/: design.md  requirements.md
native/macos/: README.md
scripts/: build-local-package.sh  dev-local-debug.sh
(+52 files in other folders)
