[workspace]
members = [
  "crates/sright-core",
  "crates/sright-cli",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sright-core = { path = "crates/sright-core" }
thiserror = "2"
