[package]
name = "sright-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
md-5 = "0.10"
qrcode = "0.14"
serde.workspace = true
serde_json.workspace = true
sha1 = "0.10"
sha2 = "0.10"
thiserror.workspace = true
walkdir = "2"
zip = "0.6"
